# openspeedball2

./: .gitignore  README.md  pyproject.toml
data/: arena.json  formations.json  physics.json  scoring.json  teams.json
docs/: assets.md  dod-audit.md
docs/spec/: ai-gap-analysis.md  mechanics.md
docs/superpowers/plans/: 2026-07-13-openspeedball-mvp.md  2026-07-14-arena-furniture-tier1.md
docs/superpowers/specs/: 2026-07-14-arena-furniture-design.md
present/: app.py  hud.py  input_map.py  renderer.py
sim/: actions.py  ai.py  config.py  entities.py  furniture.py  input.py  match.py  player.py  rng.py  scoring.py  vec.py
tests/: test_actions.py  test_ai.py  test_ball.py  test_config.py  test_frame_trace.py  test_furniture.py  test_input_map.py  test_match.py  test_player.py  test_rng.py  test_scoring.py  test_sim_purity.py
tools/: crop_amiga_sprites.py  dos_pc1_decode.py  extract_assets.py  extract_binary_constants.py  frame_trace.py
