[project]
name = "openspeedball"
version = "0.1.0"
description = "Open-source remake of Speedball 2: Brutal Deluxe"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = ["pygame-ce>=2.4"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sim", "present", "tools"]
